# job-search

./: .dockerignore  .env.example  .gitignore  Dockerfile  Note.ipynb  README.md  context.txt  demo.md  need.txt  pyproject.toml  render.yaml  requirements.txt
.githooks/: post-commit
.streamlit/: config.toml  secrets.toml.example
app/: __init__.py  api.py  app.py  auth.py  conversation.py  pipeline.py  requirements.txt
collectors/: api_adzuna.py  api_remotive.py  api_themuse.py  api_usajobs.py  board_ashby.py  board_greenhouse.py  rss_remoteok.py
frontend/: UI_CRITIQUE.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  main.jsx  styles.css
frontend/src/app/layouts/: AppLayout.jsx
frontend/src/app/providers/: AppProviders.jsx
frontend/src/features/auth/: AuthShell.jsx
frontend/src/features/coach/: CoachPage.jsx
frontend/src/features/dashboard/: HomePage.jsx
frontend/src/features/jobs/: JobsPage.jsx
frontend/src/features/pipeline/: PipelinePage.jsx
frontend/src/features/resumes/: ResumesPage.jsx
frontend/src/features/settings/: SettingsPage.jsx
frontend/src/shared/components/feedback/: AiThinking.jsx  EmptyState.jsx  LoadingState.jsx  (+1 more)
frontend/src/shared/constants/: product.js
frontend/src/shared/hooks/: useJobAnnotations.js  useResumeMetadata.js
frontend/src/shared/lib/: api.js  motion.js
frontend/src/shared/utils/: format.js  format.test.js
matching/: tfidf_ranker.py
memory/: graph.py  tools.py
parsing/: resume_text.py
storage/: db.py
utils/: company_inference.py  dedupe.py
(+4 files in other folders)
